--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="anuvab_biswas.logindemo">
+    package="anuvab_biswas.logindemo">
 
     <application
         android:allowBackup="true"
@@ -11,15 +11,14 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SecondActivity">
-        </activity>
-        <activity android:name=".RegistrationActivity">
-        </activity>
+        <activity android:name=".SecondActivity"></activity>
+        <activity android:name=".RegistrationActivity"></activity>
+        <activity android:name=".PasswordActivity"></activity>
     </application>
 
 </manifest>
